--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <nav class="right-header-side">
               <ul class="menu-list">
-                <li><a class="link" href="#">about us</a></li>
+                <li><a class="link-1" href="#">about us</a></li>
                 <li><a class="link" href="#">contact us</a></li>
                 <li><a class="link" href="#">store</a></li>
                 <li><a class="link" href="#">user cases</a></li>
@@ -239,7 +239,7 @@
                 </div>
               </div>
 
-              <div class="item-1">
+              <div class="item-2">
 
                 <div class="item-top">
 
@@ -259,7 +259,7 @@
                 </div>
               </div>
 
-              <div class="item-1">
+              <div class="item-3">
 
                 <div class="item-top">
 
