--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   </div>
 
                   <div class="car-container-text">
-                  <h3 class="car-container-tittle">Boat cruize</h3>
+                  <h3 class="car-container-tittle">Car Rental</h3>
                   <p class="car-container-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quis vitae </p>
                   </div>
                 </div>
@@ -101,7 +101,7 @@
                   </div>
 
                   <div class="car-container-text">
-                  <h3 class="car-container-tittle">Bus trip</h3>
+                  <h3 class="car-container-tittle">Boat Cruize</h3>
                   <p class="car-container-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quis vitae</p>
                   </div>
                 </div>
@@ -113,7 +113,7 @@
                   </div>
 
                   <div class="car-container-text">
-                  <h3 class="car-container-tittle">Road trip</h3>
+                  <h3 class="car-container-tittle">Bus trip</h3>
                   <p class="car-container-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quis vitae </p>
                   </div>
                 </div>
@@ -125,7 +125,7 @@
                   </div>
 
                   <div class="car-container-text">
-                  <h3 class="car-container-tittle">car rental</h3>
+                  <h3 class="car-container-tittle">Road trip</h3>
                   <p class="car-container-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quis vitae </p>
                   </div>
                 </div>
