--- a/index.html
+++ b/index.html
@@ -330,11 +330,11 @@
 
                   <div class="third-element"> 
 
-                    <div class="second-element-top">
+                    <div class="third-element-top">
                     <span class="tittle" >Support</span>
                     </div>
 
-                    <div class="secondd-element-bottom">
+                    <div class="third-element-bottom">
                     <a href="#" class="link" >Lorem Ipsum 1</a>
                     <a href="#" class="link" >Lorem Ipsum 2</a>
                     <a href="#" class="link" >Lorem Ipsum 3</a>
