--- a/index.html
+++ b/index.html
@@ -318,13 +318,13 @@
                     <span class="tittle" >Company</span>
                     </div>
 
-                    <div class="secondd-element-bottom">
-                    <a href="#" class="link" >Lorem Ipsum 1</a>
-                    <a href="#" class="link" >Lorem 2</a>
-                    <a href="#" class="link" >Lorem 3</a>
-                    <a href="#" class="link" >Lorem 4</a>
-                    <a href="#" class="link" >Lorem 5</a>
-                    </div>
+                    <ul class="secondd-element-bottom">
+                    <li><a href="#" class="link" >Lorem Ipsum 1</a></li>
+                    <li><a href="#" class="link" >Lorem 2</a></li>
+                    <li><a href="#" class="link" >Lorem 3</a></li>
+                    <li><a href="#" class="link" >Lorem 4</a></li>
+                    <li><a href="#" class="link" >Lorem 5</a></li>
+                    </ul>
 
                   </div>
 
@@ -334,13 +334,13 @@
                     <span class="tittle" >Support</span>
                     </div>
 
-                    <div class="third-element-bottom">
-                    <a href="#" class="link" >Lorem Ipsum 1</a>
-                    <a href="#" class="link" >Lorem Ipsum 2</a>
-                    <a href="#" class="link" >Lorem Ipsum 3</a>
-                    <a href="#" class="link" >Lorem Ipsum 4</a>
-                    <a href="#" class="link" >Lorem Ipsum 5</a>
-                    </div>
+                    <ul class="third-element-bottom">
+                    <li><a href="#" class="link" >Lorem Ipsum 1</a></li>
+                    <li><a href="#" class="link" >Lorem Ipsum 2</a></li>
+                    <li><a href="#" class="link" >Lorem Ipsum 3</a></li>
+                    <li><a href="#" class="link" >Lorem Ipsum 4</a></li>
+                    <li><a href="#" class="link" >Lorem Ipsum 5</a></li>
+                    </ul>
 
                   </div>
                 </div>
